--- a/savchuk/inline-block.html
+++ b/savchuk/inline-block.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="style.css" />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <link rel="stylesheet" href="../style.css"/>
+    <link rel="stylesheet" href="style.css"/>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="first">
+</head>
+<body>
+<nav>
+    <ul>
+        <li><a href="/savchuk">Назад</a></li>
+    </ul>
+</nav>
+<div class="container">
+    <div class="first">
         <div class="white"></div>
-      </div>
-      <div class="middle">
+    </div>
+    <div class="middle">
         <div class="second"></div>
         <div class="white">
-          <div class="red"></div>
-          <div class="third"></div>
-          <div class="fourth"></div>
+            <div class="red"></div>
+            <div class="third"></div>
+            <div class="fourth"></div>
         </div>
-      </div>
-      <div class="first"></div>
     </div>
-  </body>
+    <div class="first"></div>
+</div>
+</body>
 </html>
