--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
 <nav>
     <ul>
-        <li><a href="./shevchenko">Шевченко Данило</a></li>
-        <li><a href="./savchuk">Савчук Олександр</a></li>
-        <li><a href="./zatsarnyi">Зацарний Максим</a></li>
+        <li><a href="/shevchenko">Шевченко Данило</a></li>
+        <li><a href="/savchuk">Савчук Олександр</a></li>
+        <li><a href="/zatsarnyi">Зацарний Максим</a></li>
     </ul>
 </nav>
 </body>
