--- a/savchuk/index.html
+++ b/savchuk/index.html
@@ -9,8 +9,8 @@
 <nav>
     <ul>
         <li><a href="/">Назад</a></li>
-        <li><a href="savchuk/inline-block">Inline blocks</a></li>
-        <li><a href="savchuk/table">Таблиця</a></li>
+        <li><a href="/savchuk/inline-block">Inline blocks</a></li>
+        <li><a href="/savchuk/table">Таблиця</a></li>
     </ul>
 </nav>
 </body>
