--- a/shevchenko/index.html
+++ b/shevchenko/index.html
@@ -9,8 +9,8 @@
 <nav>
     <ul>
         <li><a href="/">Назад</a></li>
-        <li><a href="shevchenko/float-blocks">Плаваючі блоки</a></li>
-        <li><a href="savchuk/table">Таблиця</a></li>
+        <li><a href="/shevchenko/float-blocks">Плаваючі блоки</a></li>
+        <li><a href="/savchuk/table">Таблиця</a></li>
     </ul>
 </nav>
 </body>
