--- a/savchuk/float-blocks/index.html
+++ b/savchuk/float-blocks/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../style.css"/>
+    <link rel="stylesheet" href="../../style.css"/>
     <link rel="stylesheet" href="style.css"/>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -11,7 +11,7 @@
 <body>
 <nav>
     <ul>
-        <li><a href="/savchuk">Назад</a></li>
+        <li><a href="javascript:history.back()">Назад</a></li>
     </ul>
 </nav>
 <div class="container">
