--- a/shevchenko/index.html
+++ b/shevchenko/index.html
@@ -8,9 +8,9 @@
 <body>
 <nav>
     <ul>
-        <li><a href="/">Назад</a></li>
-        <li><a href="/shevchenko/float-blocks">Плаваючі блоки</a></li>
-        <li><a href="/savchuk/table">Таблиця</a></li>
+        <li><a href="javascript:history.back()">Назад</a></li>
+        <li><a href="./float-blocks/">Плаваючі блоки</a></li>
+        <li><a href="./tables/">Таблиця</a></li>
     </ul>
 </nav>
 </body>
