--- a/shevchenko/flexbox/index.html
+++ b/shevchenko/flexbox/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Float blocks</title>
+    <title>Flexbox</title>
 </head>
 <body>
 <nav>
@@ -14,19 +14,5 @@
         <li><a href="javascript:history.back()">Назад</a></li>
     </ul>
 </nav>
-<div class="container">
-    <div class="first">
-        <div class="white"></div>
-    </div>
-    <div class="middle">
-        <div class="second"></div>
-        <div class="white">
-            <div class="red"></div>
-            <div class="third"></div>
-            <div class="fourth"></div>
-        </div>
-    </div>
-    <div class="first"></div>
-</div>
 </body>
 </html>
