--- a/savchuk/index.html
+++ b/savchuk/index.html
@@ -9,8 +9,9 @@
 <nav>
     <ul>
         <li><a href="javascript:history.back()">Назад</a></li>
-        <li><a href="./float-blocks/">Inline blocks</a></li>
+        <li><a href="./float-blocks/">Плаваючі блоки</a></li>
         <li><a href="./tables/">Таблиця</a></li>
+        <li><a href="./flexbox/">Flexbox</a></li>
     </ul>
 </nav>
 </body>
