--- a/zatsarnyi/index.html
+++ b/zatsarnyi/index.html
@@ -11,6 +11,7 @@
         <li><a href="javascript:history.back()">Назад</a></li>
         <li><a href="./float-blocks/">Плаваючі блоки</a></li>
         <li><a href="./tables/">Таблиця</a></li>
+        <li><a href="./flexbox/">Flexbox</a></li>
     </ul>
 </nav>
 </body>
