--- a/shevchenko/tables/index.html
+++ b/shevchenko/tables/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Таблиця</title>
 </head>
 <body>
@@ -11,5 +12,25 @@
         <li><a href="javascript:history.back()">Назад</a></li>
     </ul>
 </nav>
+<table>
+    <thead>
+    <tr>
+        <th colspan="4">1</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>2</td>
+        <td>3</td>
+        <td>4</td>
+        <td>5</td>
+    </tr>
+    </tbody>
+    <tfoot>
+    <tr>
+        <th colspan="4">6</th>
+    </tr>
+    </tfoot>
+</table>
 </body>
 </html>
