--- a/shevchenko/float-blocks/index.html
+++ b/shevchenko/float-blocks/index.html
@@ -12,5 +12,15 @@
         <li><a href="javascript:history.back()">Назад</a></li>
     </ul>
 </nav>
+<main>
+    <div class="top">1</div>
+    <div class="container">
+        <div class="elem">2</div>
+        <div class="elem">3</div>
+        <div class="elem">4</div>
+        <div class="elem">5</div>
+    </div>
+    <div class="bottom">6</div>
+</main>
 </body>
 </html>
