feat(shevchenko): задание по flexbox

--- a/shevchenko/flexbox/index.html
+++ b/shevchenko/flexbox/index.html
@@ -9,10 +9,123 @@
     <title>Flexbox</title>
 </head>
 <body>
-<nav>
-    <ul>
-        <li><a href="javascript:history.back()">Назад</a></li>
-    </ul>
-</nav>
+<!--<nav>-->
+<!--    <ul>-->
+<!--        <li><a href="javascript:history.back()">Назад</a></li>-->
+<!--    </ul>-->
+<!--</nav>-->
+<main>
+    <div id="promo-container">
+        <div class="title">
+            <h3>Ефективні методи навчання</h3>
+            <h2>100% засвоєння матеріалу</h2>
+        </div>
+        <div class="wrapper">
+            <div>
+                <p>
+                    Починаючи з 2016 року ми відточували наші методи навчання і знайшли найбільш дієвий спосіб,
+                    який дає можливість студентам опановувати програму краще і в більшому об'ємі.
+                </p>
+                <ul>
+                    <li>
+                        Лекційний матеріал подається окремо. Це дає змогу зосередитись на ознайомленні з ним не
+                        відволікаючись на виконання будь-яких дій.
+                    </li>
+                    <li>
+                        Практичні заняття проходять в окремі дні і включають завдання по попередній лекції. При
+                        цьому, частина завдань не містить абстрактних умов. Це дає змогу чітко закріпити
+                        пройдений матеріал. Але є завдання, які змусять вас розвиватись, оскільки будуть вже
+                        більш абстрактними, і їх виконання буде залежити від вашої уяви.
+                    </li>
+                    <li>
+                        Як результат поєднання попередніх фактори ви опануєте теоретичну частину, закріпите її
+                        на практиці в двох різновидах завдань.
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <img src="https://picsum.photos/692/389" alt="">
+                <div class="button">
+                    Всі відгуки
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="choose-way-container">
+        <div class="title">
+            <h3>Наші курси програмування</h3>
+            <h2>Обери напрямок програмування</h2>
+        </div>
+        <div class="wrapper">
+            <div class="course-item">
+                <img class="course-img" src="https://picsum.photos/325/222" alt="">
+                <div class="course-title">
+                    Java<br/>
+                    Complex
+                </div>
+                <div class="course-details">Детальніше</div>
+            </div>
+            <div class="course-item">
+                <img class="course-img" src="https://picsum.photos/325/223" alt="">
+                <div class="course-title">
+                    JavaScript<br/>
+                    Complex
+                </div>
+                <div class="course-details">Детальніше</div>
+            </div>
+            <div class="course-item">
+                <img class="course-img" src="https://picsum.photos/325/224" alt="">
+                <div class="course-title">
+                    Python<br/>
+                    Complex
+                </div>
+                <div class="course-details">Детальніше</div>
+            </div>
+            <div class="course-item">
+                <img class="course-img" src="https://picsum.photos/325/225" alt="">
+                <div class="course-title">
+                    QA/QC<br/>
+                    Тестування
+                </div>
+                <div class="course-details">Детальніше</div>
+            </div>
+        </div>
+    </div>
+    <div id="partners-container">
+        <div class="title">
+            <h3>Работодавці задоволені</h3>
+            <h2>Нашими випускниками</h2>
+        </div>
+        <div class="wrapper">
+            <div class="feedback">
+                <img src="https://picsum.photos/472/265" alt="">
+                <p>Відгук Loonar про випускників Okten</p>
+            </div>
+            <div class="wrapper partner-logos">
+                <img class="partner-logo" src="https://picsum.photos/200/101" alt="">
+                <img class="partner-logo" src="https://picsum.photos/200/102" alt="">
+                <img class="partner-logo" src="https://picsum.photos/200/103" alt="">
+                <img class="partner-logo" src="https://picsum.photos/200/104" alt="">
+                <img class="partner-logo" src="https://picsum.photos/200/105" alt="">
+                <img class="partner-logo" src="https://picsum.photos/200/106" alt="">
+                <img class="partner-logo" src="https://picsum.photos/200/107" alt="">
+                <img class="partner-logo" src="https://picsum.photos/200/108" alt="">
+            </div>
+        </div>
+    </div>
+</main>
+<footer>
+    <div class="wrapper copyright">
+        <span>©</span>
+        <span>2021</span>
+    </div>
+    <div class="wrapper social">
+        <img src="https://picsum.photos/30/30" alt="">
+        <img src="https://picsum.photos/31/30" alt="">
+        <img src="https://picsum.photos/30/31" alt="">
+        <img src="https://picsum.photos/31/31" alt="">
+        <img src="https://picsum.photos/30/32" alt="">
+    </div>
+</footer>
 </body>
 </html>
