refactor: убрана панель навигации в персональных заданиях

--- a/savchuk/flexbox/index.html
+++ b/savchuk/flexbox/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../../style.css"/>
+<!--    <link rel="stylesheet" href="../../style.css"/>-->
     <link rel="stylesheet" href="style.css"/>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -9,11 +9,11 @@
     <title>Flexbox</title>
 </head>
 <body>
-<nav>
-    <ul>
-        <li><a href="javascript:history.back()">Назад</a></li>
-    </ul>
-</nav>
+<!--<nav>-->
+<!--    <ul>-->
+<!--        <li><a href="javascript:history.back()">Назад</a></li>-->
+<!--    </ul>-->
+<!--</nav>-->
 <div class="container">
     <div class="containerInner">
         <h1 class="orange">Профессия Java-разработчик</h1>
