--- a/zatsarnyi/tables/index.html
+++ b/zatsarnyi/tables/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../style.css">
+<!--    <link rel="stylesheet" href="../../style.css">-->
     <title>Таблиця</title>
 </head>
 <body>
-<nav>
-    <ul>
-        <li><a href="javascript:history.back()">Назад</a></li>
-    </ul>
-</nav>
+<!--<nav>-->
+<!--    <ul>-->
+<!--        <li><a href="javascript:history.back()">Назад</a></li>-->
+<!--    </ul>-->
+<!--</nav>-->
 </body>
 </html>
