--- a/shevchenko/float-blocks/index.html
+++ b/shevchenko/float-blocks/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../../style.css">
+<!--    <link rel="stylesheet" href="../../style.css">-->
     <link rel="stylesheet" href="style.css">
     <title>Плаваючі блоки</title>
 </head>
 <body>
-<nav>
-    <ul>
-        <li><a href="javascript:history.back()">Назад</a></li>
-    </ul>
-</nav>
+<!--<nav>-->
+<!--    <ul>-->
+<!--        <li><a href="javascript:history.back()">Назад</a></li>-->
+<!--    </ul>-->
+<!--</nav>-->
 <main>
     <div class="top">1</div>
     <div class="container">
