Номерки на table

--- a/savchuk/tables/index.html
+++ b/savchuk/tables/index.html
@@ -18,11 +18,12 @@
       <tr>
         <td class="first" colspan="5" style="position: relative">
           <div class="whiteLine"></div>
+          <span>1</span>
         </td>
       </tr>
 
       <tr>
-        <td colspan="1" class="second"></td>
+        <td colspan="1" class="second">2</td>
         <td colspan="1"></td>
         <td colspan="2" style="background-color: white" class="second">
           <table class="whiteInner" style="width: 100%">
@@ -38,14 +39,14 @@
             <tr>
               <table style="height: 165px" class="belowWhite">
                 <tr>
-                  <td style="width: 45%" colspan="2" class="white"></td>
+                  <td style="width: 45%" colspan="2" class="white">3</td>
                   <td style="width: 5%" colspan="1" class="empty"></td>
-                  <td colspan="2" class="blue"></td>
+                  <td colspan="2" class="blue">4</td>
                 </tr>
               </table>
             </tr>
             <tr>
-              <td class="first" colspan="5"></td>
+              <td class="first" colspan="5">5</td>
             </tr>
           </table>
         </td>
