--- a/savchuk/float-blocks/index.html
+++ b/savchuk/float-blocks/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<!--    <link rel="stylesheet" href="../../style.css"/>-->
-    <link rel="stylesheet" href="style.css"/>
-    <meta charset="UTF-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <head>
+    <!--    <link rel="stylesheet" href="../../style.css"/>-->
+    <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Float blocks</title>
-</head>
-<body>
-<!--<nav>-->
-<!--    <ul>-->
-<!--        <li><a href="javascript:history.back()">Назад</a></li>-->
-<!--    </ul>-->
-<!--</nav>-->
-<div class="container">
-    <div class="first">
+  </head>
+  <body>
+    <!--<nav>-->
+    <!--    <ul>-->
+    <!--        <li><a href="javascript:history.back()">Назад</a></li>-->
+    <!--    </ul>-->
+    <!--</nav>-->
+    <div class="container">
+      <div class="first">
+        <span class="one">1</span>
         <div class="white"></div>
-    </div>
-    <div class="middle">
-        <div class="second"></div>
+      </div>
+      <div class="middle">
+        <div class="second"><span class="two">2</span></div>
         <div class="white">
-            <div class="red"></div>
-            <div class="third"></div>
-            <div class="fourth"></div>
+          <div class="red"></div>
+          <div class="third">3</div>
+          <div class="fourth">4</div>
         </div>
+      </div>
+      <div class="first">5</div>
     </div>
-    <div class="first"></div>
-</div>
-</body>
+  </body>
 </html>
