--- a/zatsarnyi/flexbox/index.html
+++ b/zatsarnyi/flexbox/index.html
@@ -14,5 +14,100 @@
 <!--        <li><a href="javascript:history.back()">Назад</a></li>-->
 <!--    </ul>-->
 <!--</nav>-->
+    <div class="page">
+        <div class="nav-container"><h2>ЩО ВИ ОПАНУЄТЕ?</h2></div>
+        <div class="images-cont">
+            <div class="image-item">
+                <img src="./img/html.jpg" alt="img">
+                <div class="image-title">HTML/CSS</div>
+            </div>
+            <div class="image-item">
+                <img src="./img/js.jpg" alt="img">
+                <div class="image-title">JAVASCRIPT</div>
+            </div>
+            <div class="image-item">
+                <img src="./img/react2.jpg" alt="img">
+                <div class="image-title">REACT</div>
+            </div>
+            <div class="image-item">
+                <img src="./img/react1.jpg" alt="img">
+                <div class="image-title">REACT</div>
+            </div>
+            <div class="image-item">
+                <img src="./img/ts.jpg" alt="img">
+                <div class="image-title">TYPESCRIPT</div>
+            </div>
+            <div class="image-item">
+                <img src="./img/angular.jpg" alt="img">
+                <div class="image-title">ANGULAR</div>
+            </div>
+            <div class="image-item">
+                <img src="./img/github1.jpg" alt="img">
+                <div class="image-title">GITHUB</div>
+            </div>
+            <div class="image-item">
+                <img src="./img/github2.jpg" alt="img">
+                <div class="image-title">GITHUB</div>
+            </div>
+        </div>
+        <div class="garanty-cont">
+            <div class="left-block"><img src="./img/girl.jpg" alt="img"></div>
+            <div class="right-block">
+                <div class="block-title">МИ ГАРАНТУЄМО НАШИМ ВИПУСКНИКАМ ПРАЦЕВЛАШТУВАННЯ <br> <span class="title-blue">В НЕ ЗАЛЕЖНОСТІ ВІД ВІКУ</span></div>
+                <div class="block-content">
+
+                    <div class="info-item">
+                        <div class="info-img-cont"><img src="./img/gal.jpg" alt="gal"></div>
+                        <div class="info-cont">
+                            <div class="info-title">НАВІТЬ У ЗРІЛОМУ ВІЦІ</div>
+                            <div class="info-text">В Україні поширений міф про те, що тільки молоді люди можуть освоїті ІТ-напрямок. Але максимальний вік нашого студента доходить до 63 років.</div>
+                        </div>
+                    </div>
+                    <div class="info-item">
+                        <div class="info-img-cont"><img src="./img/gal.jpg" alt="gal"></div>
+                        <div class="info-cont">
+                            <div class="info-title">НАВІТЬ БЕЗ ПРОФІЛЬНОЇ ОСВІТИ ТА НАВИЧОК</div>
+                            <div class="info-text">70% наших віпускників все мають освіту, не пов'язану з програмуванням.</div>
+                        </div>
+                    </div>
+                    <div class="info-item">
+                        <div class="info-img-cont"><img src="./img/gal.jpg" alt="gal"></div>
+                        <div class="info-cont">
+                            <div class="info-title">НАВІТЬ БЕЗ ЗНАННЯ АНГЛІЙСЬКОЇ</div>
+                            <div class="info-text">Адже в нашому курсі все включене вивчення англійської мови.</div>
+                        </div>
+                    </div>
+                    <div class="info-item">
+                        <div class="info-img-cont"><img src="./img/gal.jpg" alt="gal"></div>
+                        <div class="info-cont">
+                            <div class="info-title">НАВІТЬ БЕЗ ЗНАТТЯ ПРОГРАМУВАННЯ</div>
+                            <div class="info-text">Більшість наших студентів не знайомі з програмуванням, та починають свій шлях з нуля.</div>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="curse-cont">
+            <h2 class="curse-title">КУРС ПРОГРАМУВАННЯ <br> <span class="curse-title-span">JAVA З ПРАЦЕВЛАШТУВАННЯМ:</span></h2>
+            <div class="curse-content">
+                <div class="curse-img"><img src="./img/girl2.jpg" alt="img"></div>
+                <div class="curse-wrapper">
+                    <div class="wrapper-item">
+                        <div class="wrapper-title">СТАЖУВАННЯ В ІТ-КОМПАНІЇ</div>
+                        <div class="wrapper-text">Покажи себе на курсі і ще до закінчення навання ми відправимо тебе на стажування в ІТ-компанію.</div>
+                    </div>
+                    <div class="wrapper-item">
+                        <div class="wrapper-title">ТРИ ВІПУСКНИХ ПРОЕКТИ</div>
+                        <div class="wrapper-text">Наприкінці курсу ти будеш мати три проекти, з якими легко працевлаштуєшся.</div>
+                    </div>
+                    <div class="wrapper-item">
+                        <div class="wrapper-title">ІНТЕНСИВНІСТЬ</div>
+                        <div class="wrapper-text">На відміну від інших наши студенти вчаться 6 разів на тиждень в продовж всього терміну. Саме тому вони краще за випускників всіх інших шкіл та легко працевлаштуються.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
