--- a/zatsarnyi/float-blocks/index.html
+++ b/zatsarnyi/float-blocks/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
 <!--    <link rel="stylesheet" href="../../style.css">-->
+  <link rel="stylesheet" href="style.css" />
+
     <title>Плаваючі блоки</title>
 </head>
 <body>
@@ -11,5 +13,19 @@
 <!--        <li><a href="javascript:history.back()">Назад</a></li>-->
 <!--    </ul>-->
 <!--</nav>-->
+<div class="container">
+    <div class="first">
+      <span class="one">1</span>
+      <div class="white"></div>
+    </div>
+    <div class="middle">
+      <div class="second"><span class="two">2</span></div>
+      <div class="third"><span class="two">3</span></div>
+      <div class="fourth"><span class="two">4</span></div>
+      <div class="third"><span class="two">5</span></div>
+      
+    </div>
+    <div class="first">6</div>
+  </div>
 </body>
 </html>
