--- a/zatsarnyi/tables/index.html
+++ b/zatsarnyi/tables/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
 <!--    <link rel="stylesheet" href="../../style.css">-->
+  <link rel="stylesheet" href="style.css" />
+
     <title>Таблиця</title>
 </head>
 <body>
@@ -11,5 +13,26 @@
 <!--        <li><a href="javascript:history.back()">Назад</a></li>-->
 <!--    </ul>-->
 <!--</nav>-->
+<table>
+    <tr>
+      <td class="first" colspan="5" style="position: relative">
+        <div class="whiteLine"></div>
+        <span>1</span>
+      </td>
+    </tr>
+
+    <tr>
+      <td colspan="1" class="second">2</td>
+      <td colspan="1" class="third">3</td>
+      <td colspan="1" class="fourth">4</td>
+      <td colspan="1" class="third">5</td>
+
+      <!-- <td colspan="1"></td> -->
+     
+
+        <tr>
+            <td class="last" colspan="5">6</td>
+        </tr>
+  </table>
 </body>
 </html>
